frontend/src/components/CheckoutWrapper/Checkout/TotalCard/totalCard.scss
@use '../../../../scss/abstracts' as *;
@use '../../../../scss/layout' as *;
@use '../../../../scss/layout' as *;

#total-card.card.card--popup {
	.card-header {
		.btn--icon-sm {
			svg {
				transform: rotate(0deg);
			}
		}
	}

	&-expanded .card-header .btn--icon-sm svg {
		transform: rotate(180deg);
	}

	.list + .list {
		margin-top: rem(15);

		@include breakpoint-min(md) {
			margin-top: rem(28);
		}
	}

	.heading {
		font-weight: $fw-medium;
		margin-bottom: rem(7);
		font-size: rem(16);
	}
	ul {
		li {
			font-size: $small;

			li + li {
				margin-top: rem(6);
			}
			.col {
				white-space: nowrap;
			}
		}
	}

	.card-footer {
		border-width: 0px;

		> * {
			flex: 1;
		}

		&.with-border {
			border-width: 1px;
		}

		#payment-request-button {
			@extend %icon-text-box;
		}
	}
}

